--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/core": "~11.2.14",
     "@angular/forms": "~11.2.14",
     "@angular/material": "^11.2.13",
+    "@angular/material-moment-adapter": "^11.2.13",
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
+    "moment": "^2.29.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
