--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,13 @@
               "src/custom-theme.scss",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/"
+              ]
+              
+            }
           },
           "configurations": {
             "production": {
