--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "netlify-cli": "^12.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "uniqid": "^5.4.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
